# 3m2tuio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibUSB.cmake
libs/TUIO/: CMakeLists.txt
libs/TUIO/osc/: OscHostEndianness.h
libs/hidapi/: CMakeLists.txt
libs/hidapi/mac/: hid.c
release/linux/: TS3M2TUIO
release/mac/: TS3M2TUIO
src/: CMakeLists.txt  TS3M.h  TS3MEventSource.cpp  TS3MEventSource.h  Utilities.cpp  Utilities.h  main.cpp  uinput.c  uinput.h
