include_directories(. hidapi)

if(APPLE)
	set(SYSLIBS ${MAC_LIBS})
	set(HIDAPI_SRCS mac/hid.c)
elseif(WIN32)
	set(SYSLIBS setupapi)
	set(HIDAPI_SRCS windows/hid.cpp)
else(APPLE)
	find_package(LibUSB)
	set(SYSLIBS ${LIBUSB_LIBRARIES})
	include_directories(${LIBUSB_INCLUDE_DIR})
	set(HIDAPI_SRCS linux/hid-libusb.c)
endif(APPLE)

add_library(HIDAPI STATIC ${HIDAPI_SRCS})
target_link_libraries(HIDAPI ${SYSLIBS})
if(WIN32)
#install(TARGETS HIDAPI DESTINATION lib)
else(WIN32)
#install(TARGETS HIDAPI LIBRARY DESTINATION lib)
endif(WIN32)
